# SfPTER-ICCP2025

./: .gitignore  README.md  index.html  pyproject.toml
code/: evaluate.py  inference.py  preprocess.py  train.py
code/models/: dsfp.py  kondo.py  ours.py  oursmb.py  sfpw.py  unet.py
static/css/: index.css
