[project]
name = "sfpter-iccp2025"
version = "0.1.0"
description = "official implementation for ICCP2025 paper 'Shape from Polarization of Thermal Emission and Reflection'"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "tqdm>=4.66.6",
    "pyyaml>=5.4.1",
    "numpy==2.0.2",
    "scipy==1.14.1",
    "matplotlib==3.9.2",
    "opencv-python==4.10.0.84",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }